# term-project-2025

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  entrypoint.sh  logging.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 135a9639e496_add_ndvi_url_to_fields.py  2a212750ad7b_initial.py  65226bf95f0a_added_expiration_time.py  be058be0b8da_add_sar_change_url_to_fields.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  draw.js  map.js
secrets/: .env.sample
src/: main.py
src/api/common/: decorators.py
src/api/routers/: field.py  satellite.py  weather.py
src/api/schemas/: field.py  ndvi_comparison.py  sar.py  satellite.py  weather.py
src/common/: dependencies.py  exceptions.py
src/config/: base.py
src/database/common/: dependencies.py
src/database/postgres/: core.py  handler.py
src/database/postgres/crud/: field.py
src/models/: field.py
src/services/: google_earth.py  weather.py
src/utils/: conversion.py  validation.py
