[tool.poetry]
name = "term-project-2025"
version = "0.1.0"
description = ""
authors = ["Ivan Proskurnytskyi <prsky.ivan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
fastapi-pagination = "^0.12.24"
uvicorn = "^0.27.1"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
alembic-postgresql-enum = "^1.3.0"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
geoalchemy2 = {extras = ["shapely"], version = "^0.14.6"}
earthengine-api = "^1.5.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.3"
mypy = "^1.8.0"
black = "^24.3.0"
pylint = "^3.1.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black-check = "black --check ."
test-coverage = "pytest --cov=. --cov-report=term"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false
exclude = [".venv"]
